Auslastungsanzeige fixed, z-index eingeführt und scroll bars

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -60,6 +60,7 @@ img {
 }
 
 #Einfahrt{
+    overflow: auto;
     border-style: solid;
     border-color: black;
     text-align: center;
@@ -74,6 +75,7 @@ img {
 }
 
 #Ausfahrt{
+    overflow: auto;
     border-style: solid;
     border-color: black;
     text-align: center;
@@ -86,6 +88,7 @@ img {
 }
 
 #automat{
+    overflow: auto;
     border-style: solid;
     border-color: black;
     text-align: center;
@@ -141,6 +144,7 @@ img {
     left: 0;
     height: 100%;
     background-color: green;
+    z-index: -1;
 }
 
 #auslastungsHeader {
@@ -173,4 +177,16 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#adminAllgemein {
+    overflow: auto;
+}
+
+#adminPreise {
+    overflow: auto;
+}
+
+#rest {
+    overflow: auto;
 }
